[package]
name = "SRQemu"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.5"
rustyline = "11.0"
tracing = "0.1"
home = "0.5"
tracing-subscriber = "0.3"

